# drug_disease_interaction

./: .env.optimized  .gitignore  GRAPH_SETUP_README.md  README.md  a.txt  blazing_fast_loader.py  blazing_fast_loader_backup.py  blazing_fast_loader_optimized.py  create_optimized_csvs.py  csv_analysis_and_fix.py  debug_pathways.py  memgraph_setup.cypher  memgraph_setup_fixed.cypher  memgraph_validation.cypher  optimization_summary.py  process_data.sh  pyproject.toml  qual2025.json  requirements.txt  run_parallel_sync.sh  run_tests.sh  setup_parallel.sh  test_imports.py  test_optimized_integration.py  test_runner.py
aux_files/: desc2025.json  drug.json  open_targets_schema.json  open_targets_schema.txt  plan.md  schema.json  schema.md
config/: hardware_optimized.json
docker/: Dockerfile  docker-compose.yml
notebooks/: 01_data_exploration.ipynb  02_graph_analysis.ipynb  2.py  3.py  feature_engineering.ipynb  graph_analysis.ipynb
reports/eda_analysis/: eda_summary.json
scripts/: download_models.py  path.py  populate_weaviate_from_neo4j.py  schema.py  schema_analysis_output.txt
src/api/: dependencies.py  main.py  middleware.py
src/api/models/: requests.py  responses.py
src/api/routes/: health.py  search.py
src/core/: hybrid_engine.py  llm_service.py  neo4j_service.py  weaviate_service.py
src/ddi/: __init__.py
src/ddi/analysis/: graph_analysis.py
src/ddi/data/preprocessing/: subset_chembl.py
src/ddi/data/sources/drugbank/: integration.py  vocabulary.py  xml_parser.py
src/ddi/data/sources/mesh/: parser.py
src/ddi/data/sources/opentargets/: parser.py
src/ddi/features/: feature_engineering.py
src/ddi/graph/: builder.py
src/ddi/parser/: drugbank_parser.py  mesh_parser.py  open_targets_parser.py
src/ddi/utils/: config.py  logging.py
src/ddi/visualization/: graph_viz.py
src/frontend/: app.py
src/graphrag/core/: cache_manager.py  connection_manager.py  connection_resilience.py  context_builder.py  enhanced_connection_resilience.py  graph_analytics.py  hardware_optimizer.py  initialization.py  legacy_graph_analytics.py  legacy_query_engine.py  llama_integration.py  metrics.py  neo4j_analytics.py  neo4j_query_engine.py  optimized_cache_manager.py  optimized_context_builder.py  optimized_initialization.py  optimized_vector_store.py  prompt_templates.py  query_engine.py  query_processor.py  result_aggregator.py  retriever.py  service_health.py  statistics_collector.py  vector_store.py
src/graphrag/frontend/: app.py  cache.py  config.py  graphrag_app.py  router.py  simple_app.py  state.py  streamlit_app.py
src/graphrag/frontend/components/: conversation_manager.py  graph_interactive.py  query_panel.py  response_panel.py  sidebar.py  status.py  visualization.py
src/graphrag/frontend/pages/: browse_entities.py  statistics.py
src/graphrag/generators/: llm_client.py  response_builder.py
src/graphrag/retrievers/: __init__.py  community_retriever.py  path_retriever.py  subgraph_retriever.py
src/hypotheses/core/: __init__.py  base.py
src/hypotheses/h1_indication_distance/: __init__.py  compute.py
src/hypotheses/h2_module_pagerank/: __init__.py  compute.py
src/hypotheses/h3_trial_enrichment/: compute.py
src/hypotheses/h4_side_effect_overlap/: compute.py
src/hypotheses/utils/: loaders.py
src/parser/: mesh_parser.py
src/scripts/: analyze_processed_data.py  analyze_raw_data.py  build.py  build_graph.py  build_memgraph.py  build_protein_mapping.py  build_protein_mapping1.py  create_disease_mapping.py  extract_td_assoc.py  generate_edges.py  generate_graph.py  generate_hypotheses.py  generate_nodes.py  harmonize_all_mappings.py  lol.py  mapper.py  migrate_to_weaviate.py  networkx_to_memgraph.py  p.py  path.py  sync_checker.py
src/tests/test_api/: test_api.py
src/tests/test_core/: test_config.py  test_hybrid_engine.py
src/tests/test_integration/: conftest.py  test_end_to_end.py
src/utils/: config.py  logging.py  model_manager.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/analysis/: test_graph_analysis.py
tests/unit/core/: test_optimized_context_builder.py  test_optimized_initialization.py  test_optimized_vector_store.py  test_query_engine_baseline.py  test_query_processor.py  test_result_aggregator.py
tests/unit/data/sources/drugbank/: test_vocabulary.py
tests/unit/data/sources/mesh/: test_mesh_parser.py  test_parser.py
tests/unit/data/sources/opentargets/: test_opentargets_parser.py
tests/unit/graph/: test_builder.py  test_conversion.py
tests/unit/visualization/: test_graph_viz.py
