[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drug_disease_interaction"
version = "0.1.0"
description = "Drug-Disease Interaction Prediction using Graph Neural Networks"
authors = [{name = "Satya Pratheek TATA", email = "satyapratheek.tata@edhec.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "llama-index",
    "streamlit-agraph",
    "tenacity",
    "streamlit",
    "pandas",
    "plotly",
    "networkx",
    "ollama",
    "numpy",
    "pandas",
    "networkx",
    "torch",
    "torch-geometric",
    "rdkit",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "ipykernel",
    "uniprot-id-mapper",
    "typer",
    "rich",
    "python-louvain",
    "scipy",
    "pytrials",
    "requests",
    "ollama",
    "chromadb",
    "sentence-transformers",
    "streamlit",
    "plotly",
    "weaviate",
    "weaviate-client==4.8.0",
    "neo4j>=5.28.1",
    "pytest>=8.3.5",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Tell pytest to only look for tests in the src/tests directory
testpaths = [
    "src/tests",
]
# Explicitly tell pytest to NOT go into these directories
norecursedirs = [
    "data",
    "docker",
    "logs",
    "aux_files",
    ".venv",
]
# Register the asyncio mark to fix the warning
markers = [
    "asyncio: mark a test as asynchronous.",
]
# Tell pytest-docker where to find the compose file
addopts = "--docker-compose=docker/docker-compose.yml"
