[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drug_disease_interaction"
version = "0.1.0"
description = "Drug-Disease Interaction Prediction using Graph Neural Networks"
authors = [{name = "Satya Pratheek TATA", email = "satyapratheek.tata@edhec.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    # ... your existing dependencies
    "llama-index>=0.10.0",
    "streamlit-agraph",
    "tenacity",
    "streamlit",
    "pandas",
    "plotly",
    "networkx",
    "ollama",
    "numpy",
    "pandas",
    "networkx",
    "torch",
    "torch-geometric",
    "rdkit",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "ipykernel",
    "uniprot-id-mapper",
    "typer",
    "rich",
    "python-louvain",
    "scipy",
    "pytrials",
    "requests",
    "ollama",
    "chromadb",
    "sentence-transformers",
    "streamlit",
    "plotly",
    "weaviate",
    "weaviate-client==4.8.0",
    "neo4j>=5.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "redis>=6.1.1",
    "fastapi-cache2>=0.2.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "src/tests",
]
norecursedirs = [
    "data",
    "docker",
    "logs",
    "aux_files",
    ".venv",
]
markers = [
    "asyncio: mark a test as asynchronous.",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-ra"
]
# You can also add custom commands
[project.scripts]
test-unit = "test_runner:main"